--- a/main.html
+++ b/main.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <link rel="stylesheet" href="styles.css" />  
-    <title>Font Customization</title>  
+    <title>Preferred Cookie</title>  
 </head>  
 <body>  
-    <form id="customizationForm">  
+    <form id="settings-form">  
         <label for="fontsize">Font Size:</label>  
         <input  
             type="number"  
