--- a/main.html
+++ b/main.html
@@ -1,29 +1,28 @@
-<!DOCTYPE html>  
-<html lang="en">  
-<head>  
-    <meta charset="UTF-8">  
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <link rel="stylesheet" href="styles.css" />  
-    <title>Preferred Cookie</title>  
-</head>  
-<body>  
-    <form id="settings-form">  
-        <label for="fontsize">Font Size:</label>  
-        <input  
-            type="number"  
-            id="fontsize"  
-            name="fontsize"  
-            min="8"  
-            max="72"  
-            value="16"  
-        />  
-        <br />  
-        <label for="fontcolor">Font Color:</label>  
-        <input type="color" id="fontcolor" name="fontcolor" value="#000000" />  
-        <br />  
-        <input type="submit" value="Save" />  
-    </form>  
+<!DOCTYPE html>
 
-    <script type="text/javascript" src="script.js"></script>  
-</body>  
+<html>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+
+  <body>
+    <form>
+      <label for="fontsize">Font Size:</label>
+      <input
+        type="number"
+        id="fontsize"
+        name="fontsize"
+        min="8"
+        max="72"
+        value="16"
+      />
+      <br />
+      <label for="fontcolor">Font Color:</label>
+      <input type="color" id="fontcolor" name="fontcolor" value="#000000" />
+      <br />
+      <input type="submit" value="Save" />
+    </form>
+
+    <script type="text/javascript" src="./script.js"></script>
+  </body>
 </html>
